--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,5 +1,7 @@
 @import '../../variables.scss';
 
-body {
-  background-color: $test-color;
+.container {
+  max-width: 1408px;
+  margin: 0 auto;
+  padding: 0 auto;
 }
