--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,5 +1,34 @@
 @import '../../variables.scss';
 
-body {
-  background-color: $test-color;
+.container {
+  max-width: 1408px;
+  margin: 0 auto;
+  padding: 0 auto;
+}
+
+.header {
+  margin: 16px 112px 0 112px;
+
+  &__nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1216px;
+    height: 68px;
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__nav-link {
+    margin-right: 30px;
+    padding: 0 2px;
+  }
+
+  &__btn {
+    margin-left: 16px;
+  }
 }
