--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -15,6 +15,7 @@
     align-items: center;
     max-width: 1216px;
     height: 68px;
+    margin-bottom: 16px;
   }
 
   &__nav {
@@ -30,5 +31,329 @@
 
   &__btn {
     margin-left: 16px;
+  }
+}
+
+.main {
+  margin: 16px;
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0px 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.hero {
+  &__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    padding: 96px;
+  }
+
+  &__info {
+    max-width: 488px;
+  }
+
+  &__title {
+    font-weight: $font-semi-bold;
+    font-size: 60px;
+    line-height: 60px;
+    color: #171717;
+    margin-bottom: 24px;
+  }
+
+  &__description {
+    font-weight: $font-regular;
+    font-size: 20px;
+    line-height: 20px;
+    color: #525252;
+    margin-bottom: 64px;
+  }
+
+  &__btns {
+    display: flex;
+    gap: 32px;
+  }
+
+  &__img {
+    width: 100%;
+  }
+}
+
+.marquee {
+  padding: 96px 0;
+
+  &__title {
+    margin-bottom: 32px;
+    display: flex;
+    justify-content: center;
+    font-weight: $font-medium;
+    font-size: 16px;
+    line-height: 24px;
+    color: #525252;
+  }
+
+  &__container {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    user-select: none;
+  }
+
+  &__content {
+    display: flex;
+    animation: scroll 20s linear infinite;
+    gap: 1rem;
+  }
+
+  &__content>* {
+    flex-shrink: 0;
+  }
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.scroll:hover {
+  animation-play-state: paused;
+}
+
+.features {
+  padding: 96px;
+
+  &__title {
+    font-weight: $font-semi-bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #4338CA;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 12px;
+  }
+
+  &__header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 896px;
+    margin: 0 auto;
+  }
+
+  &__header-title {
+    font-weight: $font-semi-bold;
+    font-size: 48px;
+    line-height: 48px;
+    color: #171717;
+    margin: 0 40px 20px 40px;
+    text-align: center;
+  }
+
+  &__header-subtitle {
+    font-weight: $font-regular;
+    font-size: 20px;
+    line-height: 28px;
+    color: #525252;
+    text-align: center;
+    margin-bottom: 64px;
+  }
+
+  &__content-wrap {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 32px;
+    row-gap: 72px;
+    // grid-auto-rows: minmax(200px, auto);
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  &__content-logo {
+    margin-bottom: 20px;
+  }
+
+  &__content-title {
+    font-weight: $font-semi-bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #171717;
+    margin-bottom: 8px;
+  }
+
+  &__content-description {
+    font-weight: $font-regular;
+    font-size: 16px;
+    line-height: 24px;
+    color: #525252;
+  }
+}
+
+.features-img {
+  padding: 96px;
+
+  &__title {
+    font-weight: $font-semi-bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #4338CA;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 12px;
+  }
+
+  &__header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  &__header-title {
+    font-weight: $font-semi-bold;
+    font-size: 48px;
+    line-height: 48px;
+    color: #171717;
+    margin: 0 40px 20px 40px;
+    text-align: center;
+  }
+
+  &__header-subtitle {
+    font-weight: $font-regular;
+    font-size: 20px;
+    line-height: 28px;
+    color: #525252;
+    text-align: center;
+    margin-bottom: 64px;
+  }
+
+  &__content-wrap {
+    display: flex;
+    justify-content: space-between;
+    gap: 32px;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: top;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  &__logo {
+    width: 48px;
+    height: 48px;
+  }
+
+  &__text-info {
+    font-weight: $font-semi-bold;
+    font-size: 18px;
+    line-height: 28px;
+    color: #171717;
+    margin-bottom: 8px;
+    padding: 10px 0;
+  }
+
+  &__text-subtitle {
+    font-weight: $font-regular;
+    color: #525252;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  &__image-wrap {
+    width: 100%;
+  }
+}
+
+.info {
+  padding: 96px;
+
+  &__title {
+    font-weight: $font-semi-bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #4338CA;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 12px;
+  }
+
+  &__header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  &__header-title {
+    font-weight: $font-semi-bold;
+    font-size: 48px;
+    line-height: 48px;
+    color: #171717;
+    margin: 0 40px 20px 40px;
+    text-align: center;
+  }
+
+  &__header-subtitle {
+    font-weight: $font-regular;
+    font-size: 20px;
+    line-height: 28px;
+    color: #525252;
+    text-align: center;
+    margin-bottom: 64px;
+  }
+
+  &__content-wrap {
+    display: flex;
+    justify-content: space-between;
+    gap: 32px;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: top;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  &__logo {
+    width: 48px;
+    height: 48px;
+  }
+
+  &__text-info {
+    font-weight: $font-semi-bold;
+    font-size: 18px;
+    line-height: 28px;
+    color: #171717;
+    margin-bottom: 8px;
+    padding: 10px 0;
+  }
+
+  &__text-subtitle {
+    font-weight: $font-regular;
+    color: #525252;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  &__image-wrap {
+    width: 100%;
   }
 }
