--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,19 @@
 @import './variables.scss';
 
+.container {
+  max-width: 1408px;
+  margin: 0 auto;
+  padding: 0 auto;
+}
+
+.main {
+  margin: 16px;
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0px 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
 body {
   font-family: "Noto Sans", serif;
   font-optical-sizing: auto;
