--- a/src/components/features/features.module.scss
+++ b/src/components/features/features.module.scss
@@ -1,9 +1,9 @@
-@import '../variables.scss';
+@import '../../variables.module.scss';
 
-.info {
+.featuresImg {
   padding: 96px;
 
-  &__title {
+  .title {
     font-weight: $font-semi-bold;
     font-size: 16px;
     line-height: 24px;
@@ -13,7 +13,7 @@
     margin-bottom: 12px;
   }
 
-  &__header {
+  .header {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,16 +21,18 @@
     margin: 0 auto;
   }
 
-  &__header-title {
+  .headerTitle {
     font-weight: $font-semi-bold;
     font-size: 48px;
     line-height: 48px;
     color: #171717;
     margin: 0 40px 20px 40px;
     text-align: center;
+    max-width: 816px;
+    width: 100%;
   }
 
-  &__header-subtitle {
+  .headerSubtitle {
     font-weight: $font-regular;
     font-size: 20px;
     line-height: 28px;
@@ -39,25 +41,29 @@
     margin-bottom: 64px;
   }
 
-  &__content-wrap {
+  .wrapper {
     display: flex;
     justify-content: space-between;
     gap: 32px;
   }
 
-  &__item {
+  .reverse {
+    flex-direction: row-reverse;
+  }
+
+  .item {
     display: flex;
     justify-content: top;
     gap: 20px;
     margin-bottom: 40px;
   }
 
-  &__logo {
+  .logo {
     width: 48px;
     height: 48px;
   }
 
-  &__text-info {
+  .textInfo {
     font-weight: $font-semi-bold;
     font-size: 18px;
     line-height: 28px;
@@ -66,14 +72,21 @@
     padding: 10px 0;
   }
 
-  &__text-subtitle {
+  .textTitle {
+    font-weight: $font-semi-bold;
+    color: #171717;
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .textSubtitle {
     font-weight: $font-regular;
     color: #525252;
     font-size: 16px;
     line-height: 24px;
   }
 
-  &__image-wrap {
+  .imageWrap {
     width: 100%;
   }
 }
