--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,4 @@
-@import './variables.scss';
-
-.container {
-  max-width: 1408px;
-  margin: 0 auto;
-  padding: 0 auto;
-}
+@import './variables.module.scss';
 
 .main {
   margin: 16px;
