--- a/src/pricing/pricing.module.scss
+++ b/src/pricing/pricing.module.scss
@@ -1,9 +1,9 @@
-@import '../variables.scss';
+@import '../variables.module.scss';
 
-.features-img {
+.pricing {
   padding: 96px;
 
-  &__title {
+  .title {
     font-weight: $font-semi-bold;
     font-size: 16px;
     line-height: 24px;
@@ -13,7 +13,7 @@
     margin-bottom: 12px;
   }
 
-  &__header {
+  .header {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,7 +21,7 @@
     margin: 0 auto;
   }
 
-  &__header-title {
+  .headerTitle {
     font-weight: $font-semi-bold;
     font-size: 48px;
     line-height: 48px;
@@ -30,50 +30,44 @@
     text-align: center;
   }
 
-  &__header-subtitle {
+  .headerSubtitle {
     font-weight: $font-regular;
     font-size: 20px;
     line-height: 28px;
     color: #525252;
     text-align: center;
+    margin: 0px 160px 64px 160px;
+  }
+
+  .toggle {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
     margin-bottom: 64px;
   }
 
-  &__content-wrap {
+  .toggleBtn {
+    font-weight: $font-medium;
+    font-size: 16px;
+    line-height: 24px;
+    color: #171717;
+    background: #fff;
+    border: none;
+    padding: 10px 38px;
+    cursor: pointer;
+  }
+
+  & .active {
+    border-radius: 4px;
+    border: 1px solid #E6E6E6;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
+      0px 1px 2px 0px rgba(0, 0, 0, 0.06);
+  }
+
+  .cards {
     display: flex;
     justify-content: space-between;
     gap: 32px;
-  }
-
-  &__item {
-    display: flex;
-    justify-content: top;
-    gap: 20px;
-    margin-bottom: 40px;
-  }
-
-  &__logo {
-    width: 48px;
-    height: 48px;
-  }
-
-  &__text-info {
-    font-weight: $font-semi-bold;
-    font-size: 18px;
-    line-height: 28px;
-    color: #171717;
-    margin-bottom: 8px;
-    padding: 10px 0;
-  }
-
-  &__text-subtitle {
-    font-weight: $font-regular;
-    color: #525252;
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  &__image-wrap {
-    width: 100%;
+    align-items: center;
   }
 }
